~ added a couple of ED2KFileTypes [Tuxman/WiZaRd]
+ NeoLoader detection by David Xanatos [Tuxman]
~ avoid debug-related function overhead [Tuxman - original by YumeYao]
~ prevent detecting VBR .mp3 files as "fake" [WiZaRd]
+ added modicon.dll support [WiZaRd]
! fixed "apply" button in files options - thx to dylandog84 [WiZaRd]
+ added kMule ul/dl stats [WiZaRd]
+ added kMule client icon [WiZaRd]
~ replaced SevenZip++ by 7z console code to allow extraction of non-7z/zip archives [WiZaRd]

20130705:
! fixed missing "Translated by" label - thx to THOR [WiZaRd]
! fixed wrong client icons - thx to SS1900 [WiZaRd]
! fixed (wrong) disabled 7z controls [WiZaRd]
~ added .apk support [Tuxman]
! fixed possibly buffer overflow in statistics - thx to RejZoR [WiZaRd]
! switched "compatible" and "default" client icons [WiZaRd]
! fixed crash on automatic extraction - thx to satanius [WiZaRd]

XXXXYYZZ:
> updated miniupnplib support to v1.8 (03/05/2013) [Tuxman/WiZaRd]
! fixed duplicated badguy icons caused by modicons - thx to SS1900 [WiZaRd]
! fixed kMule version display in stats [WiZaRd]
! fixed iSOTN [WiZaRd]
+ added file & client availability (health) display - original by Morph4u (?) [WiZaRd]
+ added SCT - original by Netfinity [WiZaRd]
+ added modprot support [WiZaRd]
 * includes LowID UDP Ping support
+ added QOS support - original by Netfinity [WiZaRd]
+ added DesktopIntegration for even better WINE support - original by Netfinity [WiZaRd]
+ added info window with logs [WiZaRd]
~ kMule will now try different settings if the default shared usage setting fails to create all necessary folders [WiZaRd]
! fixed problem with race conditions on startup which could cause kMule not to connect when using the first start wizard [WiZaRd]
+ added NAT-T support - original by David Xanatos [WiZaRd]
+ added Spread Priority v3 [Tuxman]
+ added Clipboard Watchdog [Tuxman]
 * provides a more elegant way to watch the clipboard for eD2k links